# budgie-browser-profile-launcher

./: .gitignore  README.md  install.sh  meson.build  uninstall.sh
src/: meson.build
src/budgie-browser-profile-launcher/: BrowserProfileLauncher.plugin  BrowserProfileLauncher.py  BudgieBrowserProfileLauncher.plugin  BudgieBrowserProfileLauncher.py  FileLog.py  LocalStateInfoLoader.py  Log.py  Makefile.am  MyLog.py  meson.build
src/budgie-browser-profile-launcher/helpers/: JsonHelper.py  LocalStateHelper.py  PopenHelper.py  SortHelper.py  meson.build
src/budgie-browser-profile-launcher/log/: Error.py  Log.py  meson.build
src/budgie-browser-profile-launcher/models/: Browser.py  Profile.py  meson.build
src/budgie-browser-profile-launcher/widgets/: BrowserButton.py  Dialog.py  DirectionalButton.py  LauncherButton.py  ListView.py  ProfileButton.py  meson.build  meson.build~
src/icons/: meson.build
