
install_data(
    'browser-profile-launcher-1-symbolic.svg',
    'browser-profile-launcher-2-symbolic.svg',
    'browser-profile-launcher-butterfly-symbolic.svg',
    'browser-profile-launcher-add-new-symbolic.svg',
    'browser-profile-launcher-incognito-symbolic.svg',
    'browser-profile-launcher-delete-symbolic.svg',
    install_dir: PIXMAPS_DIR
)
